--- a/ReviewFinishedAction/ReviewFinishedAction.csproj
+++ b/ReviewFinishedAction/ReviewFinishedAction.csproj
@@ -6,4 +6,8 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
